unpackaged/main/default/objects/Email_Configuration__mdt/Email_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Reusable config for email engine</description>
    <label>Email Configuration</label>
    <pluralLabel>Email Configurations</pluralLabel>
</CustomObject>