unpackaged/main/default/objects/Email_Configuration__mdt/fields/Default_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Default_Recipient__c</fullName>
    <label>Default Recipient</label>
    <type>Email</type>
</CustomField>