unpackaged/main/default/objects/Email_Configuration__mdt/fields/Default_Sender__c.field-meta.xml
<CustomField>
    <fullName>Default_Sender__c</fullName>
    <label>Default Sender</label>
    <type>Email</type>
</CustomField>