unpackaged/main/default/objects/Email_Configuration__mdt/fields/Email_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_API_Name__c</fullName>
    <label>Email Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>