unpackaged/main/default/objects/Email_Configuration__mdt/fields/Triggering_Flow__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Flow__c</fullName>
    <label>Triggering Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>