unpackaged/main/default/objects/Email_Configuration__mdt/fields/Use_Template__c.field-meta.xml
<CustomField>
    <fullName>Use_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Template</label>
    <type>Checkbox</type>
</CustomField>